[package]
name = "graplsub"
version = "0.1.1-dev"
edition = "2024"
authors = [ "Andy Smith <andy-graplsub@strugglers.net>"]

[dependencies]
envy = "0.4"
format_serde_error = "0.3"
hex = "0.4"
md5 = "0.8"
rand = "0.9"
reqwest = { version="0.12", features=["json"] }
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version="1.48", features=["default", "macros", "rt-multi-thread"] }
tokio-macros = "2.6"
